--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
 	<uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17" />
 
+	<uses-library android:name="com.google.android.maps"/>
+
 	<supports-screens
 		android:smallScreens="true"
 		android:normalScreens="true"
@@ -12,12 +14,31 @@
 		android:xlargeScreens="true" />
 
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<permission
+		android:name="com.example.mapdemo.permission.MAPS_RECEIVE"
+		android:protectionLevel="signature"/>
+	<uses-permission android:name="com.protocollabs.android.cellperf.permission.MAPS_RECEIVE"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+	<!-- The following two permissions are not required to use
+			 Google Maps Android API v2, but are recommended. -->
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+	<uses-feature
+		android:glEsVersion="0x00020000"
+		android:required="true"/>
 
 	<application
 		android:label="@string/app_name"
 		android:allowBackup="true"
 		android:icon="@drawable/ic_launcher"
 		android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+
+		<meta-data
+			android:name="com.google.android.maps.v2.API_KEY"
+			android:value="AIzaSyBrE6SAJ07xkJU651Dh5wLg2KHyKbUDiz0"/>
 
 		<activity
 			android:name=".CellPerfActivity"
