--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,8 @@
 		android:label="@string/app_name"
 		android:allowBackup="true"
 		android:icon="@drawable/ic_launcher"
-		android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+		android:theme="@style/AppBaseTheme"
+		>
 
 		<uses-library android:name="com.google.android.maps"/>
 
