measurement service implementation
Signed-off-by: Hagen Paul Pfeifer <hagen@jauu.net>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,7 +50,13 @@
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
-		</activity>
+        </activity>
+
+        <service
+            android:name=".MeasurementsService"
+		    android:icon="@drawable/ic_launcher"
+            android:label="MeasurementsService" >
+        </service>
 
 	</application>
 
