--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,8 +33,9 @@
 	<application
 		android:label="@string/app_name"
 		android:allowBackup="true"
-		android:icon="@drawable/ic_launcher"
+		android:icon="@drawable/cellperf_logo"
 		android:theme="@style/AppBaseTheme"
+		android:debuggable="true"
 		>
 
 		<uses-library android:name="com.google.android.maps"/>
@@ -54,7 +55,7 @@
 
         <service
             android:name=".MeasurementsService"
-		    android:icon="@drawable/ic_launcher"
+						android:icon="@drawable/cellperf_logo"
             android:label="MeasurementsService" >
         </service>
 
